# maintainer-digest

./: .gitignore  AGENTS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  FILE_TREE.txt  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: ci.yml  maintainer-digest.yml
docs/: APPLICATION_NOTES.md  PUBLISH.md  ROADMAP.md  SECURITY_MODEL.md
examples/: RELEASE_NOTES.md  issues.json  prs.json
src/maintainer_digest/: __init__.py  cli.py  fixtures.py  github_client.py  labels.py  models.py  prompts.py  release_notes.py  render.py  scoring.py
tests/: test_labels.py  test_release_notes.py  test_render.py  test_scoring.py
