[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "maintainer-digest"
version = "0.1.0"
description = "Issue, PR, and release digests for open-source maintainers."
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [{ name = "Ersan Ersoy" }]
keywords = ["open-source", "maintainers", "github", "triage", "release-notes", "codex", "automation"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Bug Tracking",
  "Topic :: Software Development :: Version Control :: Git"
]
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.6"]

[project.scripts]
maintainer-digest = "maintainer_digest.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/maintainer_digest"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = []

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
